      we stopped ever reporting failed revisions because we started
      erroring instead, and the copied revisions count is not used in the
      UI at all - indeed it only reflects the repository status not
      changes to the branch itself. (Robert Collins)

    * MutableTree.commit now favours the "authors" argument, with the old
      "author" argument being deprecated.

    * Remove deprecated EmptyTree.  (Martin Pool)

    * ``Repository.fetch`` now accepts an optional ``fetch_spec``
      parameter.  A ``SearchResult`` or ``MiniSearchResult`` may be passed
      to ``fetch_spec`` instead of a ``last_revision`` to specify exactly
      which revisions to fetch. (Andrew Bennetts)

    * ``RepositoryAcquisitionPolicy.acquire_repository`` now returns a
      tuple of ``(repository, is_new_flag)``, rather than just the
      repository.  (Andrew Bennetts)

    * Revision.get_apparent_author() is now deprecated, replaced by
      Revision.get_apparent_authors(), which returns a list. The former
      now returns the first item that would be returned from the second.

    * The ``BranchBuilder`` test helper now accepts a ``timestamp``
      parameter to ``build_commit`` and ``build_snapshot``.  (Martin Pool)

    * The ``_fetch_*`` attributes on ``Repository`` are now on
      ``RepositoryFormat``, more accurately reflecting their intent (they
      describe a disk format capability, not state of a particular
      repository of that format). (Robert Collins)

  INTERNALS:

    * Branching from a non-stacked branch on a smart protocol is now
      free of virtual file system methods.
      (Robert Collins, Andrew Bennetts)

    * Branch and Repository creation on a bzr+ssh://server are now done
      via RPC calls rather than VFS calls, reducing round trips for
      pushing new branches substantially. (Robert Collins)

    * ``Branch.clone`` now takes the ``repository_policy`` formerly used
      inside ``BzrDir.clone_on_transport``, allowing stacking to be