@@ -174,6 +174,10 @@ IN DEVELOPMENT
     * MutableTree.commit now favours the "authors" argument, with the old
       "author" argument being deprecated.
 
+    * New sort order for ``get_record_stream`` ``groupcompress`` which
+      sorts optimally for use with groupcompress compressors. (John Arbash
+      Meinel, Robert Collins)
+
     * Remove deprecated EmptyTree.  (Martin Pool)
 
     * ``Repository.fetch`` now accepts an optional ``fetch_spec``
